RESOLVED FIXED275212
[WebGPU] Queue should not automatically commit command buffers on user's behalf, instead trigger device lost
https://bugs.webkit.org/show_bug.cgi?id=275212
Summary [WebGPU] Queue should not automatically commit command buffers on user's beha...
Mike Wyrzykowski
Reported 2024-06-06 08:58:23 PDT
[WebGPU] Queue should not automatically commit command buffers on user's behalf, instead trigger device lost
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-06 08:58:39 PDT
Mike Wyrzykowski
Comment 2 2024-06-06 12:19:19 PDT
EWS
Comment 3 2024-06-06 23:34:20 PDT
Committed 279799@main (8eedb0d33654): <https://commits.webkit.org/279799@main> Reviewed commits have been landed. Closing PR #29587 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.