[WebGPU] Queue should not automatically commit command buffers on user's behalf, instead trigger device lost (275212) https://bugs.webkit.org/show_bug.cgi?id=275212 <radar://129343583>

Reviewed by Dan Glastonbury.

Per https://github.com/gpuweb/gpuweb/issues/4622#issuecomment-2138423053, the API
will allow for creation of up to 1000 GPUCommandEncoder and non-submitted GPUCommandBuffer
instances.

Ideally we will advocate for minimal usage, but there was strong pushback to setting a lower
limit. So we can inform developers that if they wish to obtain optimal performance on
Apple's platforms, they should keep work in a command buffer in number of ms and not less than
that with a large number of buffers.

* Source/WebGPU/WebGPU/Device.h:
* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::create):
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::commandBufferWithDescriptor):

Canonical link: https://commits.webkit.org/279799@main